주식 종목 조회 시 가상스레드 -> 일반스레드 사용